remove 'advanced' Java functionality